// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon \`component\` prop can access to svg defs if has children 1`] = `
<div>
  <span
    class="template-pro-icon my-home-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
    >
      <defs>
        <lineargradient
          id="gradient"
        >
          <stop
            offset="20%"
            stop-color="#39F"
          />
          <stop
            offset="90%"
            stop-color="#F3F"
          />
        </lineargradient>
      </defs>
      <title>
        Cool Home
      </title>
      <path
        d="'M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z'"
        fill="scriptUrl(#gradient)"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon should support event listeners 1`] = `
<div>
  <span
    class="template-pro-icon my-home-icon"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <title>
        Custom Svg
      </title>
      <path
        d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon should support event listeners when passing svg paths as children 1`] = `
<div>
  <span
    class="template-pro-icon"
    role="img"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <title>
        Cool Home
      </title>
      <path
        d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon should support pass svg paths as children 1`] = `
<div>
  <span
    class="template-pro-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <title>
        Cool Home
      </title>
      <path
        d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon should support svg react component 1`] = `
<div>
  <span
    class="template-pro-icon my-home-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <title>
        Custom Svg
      </title>
      <path
        d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
      />
    </svg>
  </span>
</div>
`;

exports[`Icon support render svg as component 1`] = `
<div>
  <span
    class="template-pro-icon"
    role="img"
  >
    <svg
      fill="currentColor"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    />
  </span>
</div>
`;
